maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:8: error: value -= is not a member of Int
    c-=1
     ^PledgeMaze:14: error: value += is not a member of Int
      c+=1
       ^