maze.pledge.PledgeMaze.scala.code
override def run() {
}

def keepHandOnSideWall(c:Int){
  if (estFaceMur()){
    droite()
    c-=1
  }
  else {
    avance();gauche()
    while (!estFaceMur()){
      avance();gauche()
      c+=1
    }
    droite()
  }
}

def isDirectionFree(dir:Direction):Boolean ={
  setDirection(dir)
  if(estFaceMur()){
    return false
  }
  else {
    return true
  }
}